[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/scenes/settings/SettingsScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/roboto_r_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/roboto_b_36.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/scenes/ui/PopupMessage.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.231373, 0.309804, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="SettingsScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 336.0
margin_bottom = 410.0
custom_styles/panel = SubResource( 1 )

[node name="M" type="MarginContainer" parent="."]
margin_right = 336.0
margin_bottom = 410.0
custom_constants/margin_right = 4
custom_constants/margin_top = 16
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="V" type="VBoxContainer" parent="M"]
margin_left = 4.0
margin_top = 16.0
margin_right = 332.0
margin_bottom = 406.0

[node name="SettingsTitle" type="Label" parent="M/V"]
margin_right = 328.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"
align = 1
valign = 1

[node name="HS" type="HSeparator" parent="M/V"]
margin_top = 47.0
margin_right = 328.0
margin_bottom = 111.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowNumbers" type="CheckButton" parent="M/V"]
margin_top = 115.0
margin_right = 328.0
margin_bottom = 155.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
pressed = true
text = "Show tile numbers"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HS2" type="HSeparator" parent="M/V"]
margin_top = 159.0
margin_right = 328.0
margin_bottom = 191.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="MarginContainer" parent="M/V"]
margin_top = 195.0
margin_right = 328.0
margin_bottom = 214.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="G" type="GridContainer" parent="M/V/M"]
margin_left = 8.0
margin_right = 320.0
margin_bottom = 19.0
columns = 4

[node name="SizeTitle" type="Label" parent="M/V/M/G"]
margin_right = 76.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "Board Size"

[node name="VS" type="VSeparator" parent="M/V/M/G"]
margin_left = 163.0
margin_right = 167.0
margin_bottom = 19.0
size_flags_horizontal = 10
custom_styles/separator = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SizeSlider" type="HSlider" parent="M/V/M/G"]
margin_left = 171.0
margin_right = 299.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 4
min_value = 3.0
max_value = 7.0
value = 4.0
tick_count = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SizeValue" type="Label" parent="M/V/M/G"]
margin_left = 303.0
margin_right = 312.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "4"

[node name="VS" type="HSeparator" parent="M/V"]
margin_top = 218.0
margin_right = 328.0
margin_bottom = 248.0
custom_styles/separator = SubResource( 5 )
custom_constants/separation = 30

[node name="FileButton" type="Button" parent="M/V"]
margin_left = 73.0
margin_top = 252.0
margin_right = 254.0
margin_bottom = 272.0
size_flags_horizontal = 6
text = "Choose Background Image"

[node name="VS2" type="HSeparator" parent="M/V"]
margin_top = 276.0
margin_right = 328.0
margin_bottom = 306.0
custom_styles/separator = SubResource( 5 )
custom_constants/separation = 30

[node name="BackButton" type="Button" parent="M/V"]
margin_left = 132.0
margin_top = 310.0
margin_right = 196.0
margin_bottom = 342.0
rect_min_size = Vector2( 64, 32 )
size_flags_horizontal = 4
text = "Back"

[node name="VS3" type="HSeparator" parent="M/V"]
margin_top = 346.0
margin_right = 328.0
margin_bottom = 372.0
size_flags_vertical = 3
custom_styles/separator = SubResource( 5 )

[node name="Label" type="Label" parent="M/V"]
margin_top = 376.0
margin_right = 328.0
margin_bottom = 390.0
text = "Game by Delano Lourenco"
align = 1

[node name="FileDialog" type="FileDialog" parent="M"]
margin_left = 4.0
margin_top = 66.0
margin_right = 332.0
margin_bottom = 356.0
rect_min_size = Vector2( 270, 290 )
size_flags_vertical = 6
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png", "*.jpeg", "*.jpg", "*.bmp", "*webp" )
current_dir = "/Projects/Godot/Projects/SlidePuzzle/project/assets/backgrounds"
current_file = "deku.jpg"
current_path = "/Projects/Godot/Projects/SlidePuzzle/project/assets/backgrounds/deku.jpg"

[node name="PopupMessage" parent="M" instance=ExtResource( 4 )]

[connection signal="toggled" from="M/V/ShowNumbers" to="." method="_on_ShowNumbers_toggled"]
[connection signal="value_changed" from="M/V/M/G/SizeSlider" to="." method="_on_SizeSlider_value_changed"]
[connection signal="pressed" from="M/V/FileButton" to="." method="_on_FileButton_pressed"]
[connection signal="pressed" from="M/V/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="file_selected" from="M/FileDialog" to="." method="_on_FileDialog_file_selected"]
